--- a/sumario.html
+++ b/sumario.html
@@ -9,7 +9,9 @@
 	<ul>
 		<li><a href="entry/classes.html">Classes</a><br></li>
 		<li><a href="entry/racas.html">Raças</a><br></li>
-		<li><a href="entry/monstros.html">Monstros</a><br></li>
+		<li></li>
+	<details>Monstros<a href="entry/monstros.html">Monstros</a><br>
+	</details>
 	</ul>
 	<h3>Tabelas</h3>
 		<ul>
