--- a/sumario.html
+++ b/sumario.html
@@ -5,16 +5,24 @@
 		<a href="index.html"></body><small>Voltar para o menu</small></a>
 		<h1>Índice de todas as entradas da WIR-D&D<h1>
 		<br>
-	<h3>Personagens e relacionados</h3>
+	<h3>=>Personagens e relacionados</h3>
+    <h4>Classes</h4>
+    <ul>
+      <li><a href="entry/ladino.html">Classes</a></li><br>
+      <li><a href="entry/arqueiro.html">Classes</a></li><br>
+    </ul>
+    <h4>Raças</h4>
+    <ul>
+      <li><a href="entry/humano.html">Classes</a></li><br>
+      <li><a href="entry/gnomo.html">Raças</a></li><br>
+    </ul>
+  <h3>=>Monstros</h3>
+  <ul>
+		<li><a href="entry/beholder.html">Beholder</a></li><br>
+		<li><a href="entry/neohidra.html">Heohidra</a></li><br>
+  </ul>
+	<h3>=>Tabelas</h3>
 	<ul>
-		<li><a href="entry/classes.html">Classes</a><br></li>
-		<li><a href="entry/racas.html">Raças</a><br></li>
-		<li></li>
-	<details>Monstros<a href="entry/monstros.html">Monstros</a><br>
-	</details>
-	</ul>
-	<h3>Tabelas</h3>
-		<ul>
 		<li><a href="entry/xp.html">Níveis e XP</a><br></li>
 		<li><a href="entry/vida.html">Vida</a><br></li>
 		<li><a href="entry/dificuldade.html">Dificuldade</a><br></li>
