criada algumas entradas

--- a/sumario.html
+++ b/sumario.html
@@ -3,18 +3,17 @@
 <head><title>Tchau</title></head>
 <body>
 		<a href="index.html"></body><small>Voltar para o menu</small></a>
-		<h1>Índice de todas as entradas da WIR-D&D<h1>
-		<br>
+		<h1>Índice de todas as entradas da WIR-D&D<h1><br>
 	<h3>=>Personagens e relacionados</h3>
     <h4>Classes</h4>
     <ul>
-      <li><a href="entry/ladino.html">Classes</a></li><br>
-      <li><a href="entry/arqueiro.html">Classes</a></li><br>
+      <li><a href="entry/ladino.html">Ladino</a></li><br>
+      <li><a href="entry/arqueiro.html">Arqueiro</a></li><br>
     </ul>
     <h4>Raças</h4>
     <ul>
-      <li><a href="entry/humano.html">Classes</a></li><br>
-      <li><a href="entry/gnomo.html">Raças</a></li><br>
+      <li><a href="entry/humano.html">Humano</a></li><br>
+      <li><a href="entry/gnomo.html">Gnomo</a></li><br>
     </ul>
   <h3>=>Monstros</h3>
   <ul>
