--- a/entry/humano.html
+++ b/entry/humano.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html"></body><small>Voltar para o menu</small></a>
+    <a href="../index.html"></body><small>Voltar para o menu</small></a>
     <h3>Humano</h2><br>
 	<p></p>
 </body>
