update index location

--- a/index.html
+++ b/index.html
@@ -5,11 +5,33 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8e/Dungeons_%26_Dragons_5th_Edition_logo.svg/1200px-Dungeons_%26_Dragons_5th_Edition_logo.svg.png" width="600" height="212">
+	<img class="center" src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8e/Dungeons_%26_Dragons_5th_Edition_logo.svg/1200px-Dungeons_%26_Dragons_5th_Edition_logo.svg.png" width="600" height="212">
 	<h1 id="h001">Wiki Interativa Resumida de RPG Dungeons and Dragons(WIR-D&D)</h1>
 	<br>
-	<a href="sumario.html">Índice de todas as entradas</a><br/>
-	<p id="p001">Esta wiki foi feita para ajudar pessoas novas do D&D e também para players experientes também! Pode ser usada para consultar tabelas presentes no livro oficial do jogador e dos monstros.p>
-	<p>Todas as entradas estão presentes no <a href="index.html">índice</a><p>
+	<p id="p001">Esta wiki foi feita para ajudar pessoas novas do D&D e também para players experientes também! Pode ser usada para consultar tabelas presentes no livro oficial do jogador e dos monstros. Todas as entradas estão presentes abaixo.
+		<h1>Índice de todas as entradas da WIR-D&D<h1>
+			<h3>=>Personagens e relacionados</h3>
+			<h4>Classes</h4>
+			<ul>
+			  <li><a href="entry/ladino.html">Ladino</a></li><br>
+			  <li><a href="entry/arqueiro.html">Arqueiro</a></li><br>
+			</ul>
+			<h4>Raças</h4>
+			<ul>
+			  <li><a href="entry/humano.html">Humano</a></li><br>
+			  <li><a href="entry/gnomo.html">Gnomo</a></li><br>
+			</ul>
+		  <h3>=>Monstros</h3>
+		  <ul>
+				<li><a href="entry/beholder.html">Beholder</a></li><br>
+				<li><a href="entry/neohidra.html">Heohidra</a></li><br>
+		  </ul>
+			<h3>=>Tabelas</h3>
+			<ul>
+				<li><a href="entry/xp.html">Níveis e XP</a><br></li>
+				<li><a href="entry/vida.html">Vida</a><br></li>
+				<li><a href="entry/dificuldade.html">Dificuldade</a><br></li>
+				<li><a href="entry/spells_casting.html">Spells e Casting</a><br></li>
+			</ul>
 </body>
 </html>
