--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h3>=>Personagens e relacionados</h3>
 			<h4>Classes</h4>
 			<ul>
-			  <li><a href="entry/ladino.html">Ladino</a></li><br>
+			  <li><a href="entry/ladino.html">Ladino a</a></li><br>
 			  <li><a href="entry/arqueiro.html">Arqueiro</a></li><br>
 			</ul>
 			<h4>Raças</h4>
