--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<img class="center" alt="Logo do Dungeons & Dragons"src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8e/Dungeons_%26_Dragons_5th_Edition_logo.svg/1200px-Dungeons_%26_Dragons_5th_Edition_logo.svg.png" width="600" height="212">
 	<h1 id="h001">Wiki Interativa Resumida de RPG Dungeons and Dragons (WIR-D&D)</h1>
 	<br>
-	<p style="font-size: large;" id="p001">Esta wiki foi feita para ajudar pessoas novas do D&D e também para players experientes! Ela pode ser usada para consultar 
+	<p id="p001">Esta wiki foi feita para ajudar pessoas novas do D&D e também para players experientes! Ela pode ser usada para consultar 
     tabelas importantes que estão presentes no livro oficial do jogador e dos monstros. O objetivo desta wiki é tentar catalogar de uma forma
     resumida <b>tudo</b> sobre Dungeons & Dragons. Se você perceber que está faltando alguma entrada, você pode criar uma issue no nosso <a href="https://github.com/Agentew04/Agentew04.github.io/issues">GitHub</a>
     ou até criar a sua própria e fazer um pedido de Pull. Todas as entradas presentes até o momento estão listadas abaixo.</p>
