--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
 			<h4>Raças</h4>
 			<ul>
 			  <li><a href="entry/humano.html">Humano</a></li><br>
-			  <li><a href="entry/gnomo.html">Gnomo</a></li><br>
 			</ul>
 		  <h3>=>Monstros</h3>
 		  <ul>
 				<li><a href="entry/beholder.html">Beholder</a></li><br>
-				<li><a href="entry/neohidra.html">Neohidra</a></li><br>
+        <li><a href="entry/neohidra.html">Neohidra</a></li><br>
+        <li><a href="entry/gnomo.html">Gnomo das Profundezas</a></li><br>
+        <li><a href="entry/zumbi.html">Zumbi</a></li><br>
+        <li><a href="entry/ogro.html">Ogro</a></li>
+        <li><a href="entry/sucubo.html">Sucubo/Íncubo</a></li>
 		  </ul>
 			<h3>=>Tabelas</h3>
 			<ul>
