tirado os spaces index

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 			<h3>=>Personagens e relacionados</h3>
 			<h4>Classes</h4>
 			<ul>
-			  <li><a href="entry/ladino.html">Ladino a</a></li><br>
-			  <li><a href="entry/arqueiro.html">Arqueiro</a></li><br>
+			  <li><a href="entry/ladino.html">Ladino a</a></li>
+			  <li><a href="entry/arqueiro.html">Arqueiro</a></li>
 			</ul>
 			<h4>Raças</h4>
 			<ul>
-			  <li><a href="entry/humano.html">Humano</a></li><br>
+			  <li><a href="entry/humano.html">Humano</a></li>
 			</ul>
 		  <h3>=>Monstros</h3>
 		  <ul>
-				<li><a href="entry/beholder.html">Beholder</a></li><br>
-        <li><a href="entry/neohidra.html">Neohidra</a></li><br>
-        <li><a href="entry/gnomo.html">Gnomo das Profundezas</a></li><br>
-        <li><a href="entry/zumbi.html">Zumbi</a></li><br>
+				<li><a href="entry/beholder.html">Beholder</a></li>
+        <li><a href="entry/neohidra.html">Neohidra</a></li>
+        <li><a href="entry/gnomo.html">Gnomo das Profundezas</a></li>
+        <li><a href="entry/zumbi.html">Zumbi</a></li>
         <li><a href="entry/ogro.html">Ogro</a></li>
         <li><a href="entry/sucubo.html">Sucubo/Íncubo</a></li>
 		  </ul>
