--- a/entry/zumbi.html
+++ b/entry/zumbi.html
@@ -6,7 +6,16 @@
 </head>
 <body>
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
-    <h3>Zumbi</h2><br>
-	<p></p>
+    <h2>Zumbi</h2><br>
+	<p>Zumbis são criaturas mortas que voltam à vida devido à alguma magia <i>necromântica</i>. Pode virar um ser vivo de volta através
+	da magia de <i>ressureição</i>. Estas criaturas podem ser reanimadas mesmo depois de meses de sua morte e de condições deploráveis.
+	Estas criaturas são muito boas em seguir ordens e matar qualquer ser vivo na sua frente porém não sabem fazer coisas complexas e
+	obviamente, um zumbi não precisa realizar nenhuma tarefa básica para viver como respirar, comer e beber água.</p>
+	<h3>Traços</h3>
+	<p>Morto-Vivo médio, neutro e mal.<br>É imune a qualquer tipo de veneno.<br>Tem um <i>range</i> de percepção de aproximadamente 18 metros
+	<br>Compreende idiomas que falava em vida, mas não pode falar.<br>Nível de Desafio: 1/4 (50%)<br>Teste de Resistência: Sabedoria (+0)</p>
+	<h3>Pontos de Vida e Habilidade</h3>
+	<p>22 Pontos de Vida (3d8 + 9)<br>8 Pontos de Armadura<br>Força: 13 (+1)<br>Destreza: 6 (-2)<br>Constituição: 16 (+3)<br>Inteligência 3 (-4)
+	<br>Sabedoria: 6 (-2)<br>Carisma: 5 (-3)</p>
 </body>
 </html>
