add mais raças/del dificuldade

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 			</ul>
 			<h4>Raças</h4>
 			<ul>
-			  <li><a href="entry/humano.html">Humano</a></li>
+        <li><a href="entry/humano.html">Humano</a></li>
+        <li><a href="entry/anao.html">Anão</a></li>
+        <li><a href="entry/elfo.html">Elfo</a></li>
+        <li><a href="entry/halfling.html">Halfling</a></li>
 			</ul>
 		  <h3>=>Monstros</h3>
 		  <ul>
@@ -37,7 +40,6 @@
 			<ul>
 				<li><a href="entry/xp.html">Níveis e XP</a><br></li>
 				<li><a href="entry/vida.html">Vida</a><br></li>
-				<li><a href="entry/dificuldade.html">Dificuldade</a><br></li>
 				<li><a href="entry/spells_casting.html">Spells e Casting</a><br></li>
 			</ul>
 </body>
