--- a/entry/elfo.html
+++ b/entry/elfo.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
-    <h3>Dificuldades</h2><br>
+    <h3>Elfo</h2><br>
 	<p></p>
 </body>
 </html>
