updated create char tutorial

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     resumida <b>tudo</b> sobre Dungeons & Dragons. Se você perceber que está faltando alguma entrada, você pode criar uma issue no nosso <a href="https://github.com/Agentew04/Agentew04.github.io/issues">GitHub</a>
     ou até criar a sua própria e fazer um pedido de Pull. Todas as entradas presentes até o momento estão listadas abaixo.</p>
 		<h1>Índice de todas as entradas da WIR-D&D<h1>
+      <h3>=>Tutoriais</h3>
+      <h4><a href="entry/tutorial_criandopersonagem.html">Criando o seu Personagem</a></h4>
 			<h3>=>Personagens e relacionados</h3>
 			<h4>Classes</h4>
 			<ul>
@@ -26,6 +28,7 @@
         <li><a href="entry/anao.html">Anão</a></li>
         <li><a href="entry/elfo.html">Elfo</a></li>
         <li><a href="entry/halfling.html">Halfling</a></li>
+        <li><a href="entry/gnomo_raca.html">Gnomo(Raça)</a></li>
 			</ul>
 		  <h3>=>Monstros</h3>
 		  <ul>
