--- a/entry/anao.html
+++ b/entry/anao.html
@@ -6,7 +6,119 @@
 </head>
 <body>
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
-    <h3>Anão</h2><br>
-	<p></p>
+    <h2>Anão</h2><br>
+	<p>Anões vêm de reinos de antiga grandeza, com salões esculpidos nas raízes das montanhas. O eco das picaretas e martelos nas minas e nas
+		forjas ardentes trazem um compromisso com o seu clã e tradições e um peculiar ódio contra goblins e orcs. Essas características costumam
+		juntar todas as linhagens de anões. São baixos, robustos, audazes , resistentes e são conhecidos por serem hábeis guerreiros, mineradores
+		e trabalhadores em pedra e metais. Embora tenham menos que 1,5 metros, são compactos e largos chegando a pesar mais do que um humano
+		60 centímetros mais alto de que ele. Sua coragem e resistência fazem que eles possam competir facilmente com qualquer povo mais alto.
+		A pele dos anões varia do marrom escuro a um matiz mais pálido, tingido de vermelho, mas os tons mais comuns são o castanho claro ou 
+		bronzeado, como certos tons terrosos. O cabelo é longo, mas de estilo simples, geralmente negro, cinzento ou castanho, embora anões
+		mais pálidos frequentemente possuem cabelos ruivos. <i>Anões machos</i> valorizam altamente suas barbas e preparam-nas com muito cuidado.<br>
+		Estas criaturas podem viver mais do que 400 anos, isto possibilita que muitos dos anões anciões ainda estejam vivos e trabalhando.
+		Eles não gostam de barcos, embora os comerciantes humanos e halflings lidem frequentemente com o comércio de bens pertencentes à eles por rotas 
+		marítimas. Membros de confiança de outras raças são bem-vindos em assentamentos anões, embora algumas áreas dessas cidades ainda sejam vetadas 
+		para estes visitantes. A unidade-mor da sociedade destas criaturas é o clã, e os anões valorizam altamente o status social. Mesmo anões que vivem 
+		longe de seus próprios reinos valorizam suas identidades e filiações de clãs, reconhecem parentes, e invocam os nomes de seus ancestrais 
+		em juramentos e xingamentos. Não possuir um clã é o pior destino de um anão.<br>
+		Eles seguem uma vida de aventuras podem ser motivados pelo desejo por tesouros – para uso próprio, para um propósito específico
+		ou mesmo a partir do desejo altruísta de ajudar os outros. Outros anões são guiados pelo comando ou pela inspiração de uma divindade,
+		um chamado direto ou simplesmente o desejo de trazer glória a um dos deuses anões. O clã e os ancestrais de um anão também são 
+		motivações importantes. Um anão pode buscar restaurar a honra perdida de um clã, vingar uma antiga ofensa sofrida ou reconquistar um
+		lugar no clã depois de ter sido exilado. Ou um anão pode buscar por um machado empunhado por um poderoso ancestral,	perdido no campo 
+		de batalha há séculos.
+	</p>
+	<h3>Nome de Anões</h3>
+	<p>O nome de um anão é concedido pelo ancião de um clã, de acordo com a tradição. Todos os nomes próprios anões têm sido utilizados e 
+		reutilizados através de gerações. O nome de um anão pertence ao clã, não ao indivíduo. Um anão que o usar indevidamente ou trouxer 
+		vergonha ao clã tem seu nome retirado e está proibido por lei de usar qualquer outro nome anão em seu lugar. Alguns nomes estão citados a seguir.</p>
+		<details><summary>Nomes Masculinos</summary>
+			<ul>
+				<li>Adrik</li>
+				<li>Alberich</li>
+				<li>Baern</li>
+				<li>Barendd</li>
+				<li>Brottor</li>
+				<li>Bruenor</li>
+				<li>Dain</li>
+				<li>Darrak</li>
+				<li>Delg</li>
+				<li>Eberk</li>
+				<li>Einkil</li>
+				<li>Fargrim</li>
+				<li>Flint</li>
+				<li>Gardain</li>
+				<li>Harbek</li>
+				<li>Kildrak</li>
+				<li>Morgran</li>
+				<li>Orsik</li>
+				<li>Oskar</li>
+				<li>Rangrim</li>
+				<li>Rurik</li>
+				<li>Taklinn</li>
+				<li>Thoradin</li>
+				<li>Thorin</li>
+				<li>Tordek</li>
+				<li>Traubon</li>
+				<li>Travok</li>
+				<li>Ulfgar</li>
+				<li>Veit</li>
+				<li>Vondal</li>
+			</ul>
+		</details>
+		<details><summary>Nomes Femininos</summary>
+			<ul>
+				<li>Amber</li>
+				<li>Artin</li>
+				<li>Audhild</li>
+				<li>Bardryn</li>
+				<li>Dagnal</li>
+				<li>Diesa</li>
+				<li>Eldeth</li>
+				<li>Falkrunn</li>
+				<li>Gunnloda</li>
+				<li>Gurdis</li>
+				<li>Helja</li>
+				<li>Hlin</li>
+				<li>Kathra</li>
+				<li>Kristryd</li>
+				<li>Ilde</li>
+				<li>Liftrasa</li>
+				<li>Mardred</li>
+				<li>Riswynn</li>
+				<li>Sannl</li>
+				<li>Torbera</li>
+				<li>Torgga</li>
+				<li>Vistra</li>
+			</ul>
+		</details>
+		<details><summary>Nomes Para Clãs</summary>
+			<ul>
+				<li>Balderk</li>
+				<li>Battlehammer</li>
+				<li>Brawnanvil</li>
+				<li>Dankil</li>
+				<li>Fireforge</li>
+				<li>Frostbeard</li>
+				<li>Gorunn</li>
+				<li>Holderhek</li>
+				<li>Ironfist</li>
+				<li>Loderr</li>
+				<li>Lutgehr</li>
+				<li>Rumnaheim</li>
+				<li>Strakeln</li>
+				<li>Torunn</li>
+				<li>Ungart</li>
+			</ul>
+		</details>
+	<h3>Traços</h3>
+	<p>São Leais, acreditam em sociedades organizadas e tem um forte senso de honestidade.<br>Envelhecem na mesma velocidade que humanos(porém são jovens até os 50)<br>
+	Possuem vantagem em testes de resistência contra venenos.<br>Possuem maestria usando vários tipos de machados e martelos.<br>
+	Sempre que um anão realizar um teste de Inteligência (História) relacionado à origem de um trabalho em pedra, ele é considerado proficiente
+	na perícia História e adiciona o dobro do seu bônus de proficiência ao teste, ao invés do seu bônus de proficiência normal.
+	Proficiência em qualquer ferramenta entre: ferreiro, cervejeiro ou pedreiro).<br>Podem ver até 18 metros no escuro completo.</p>
+	<h3>Pontos de Vida e Habilidade</h3>
+	<p>22 Pontos de Vida (3d8 + 9)<br>8 Pontos de Armadura<br>Força: 13 (+1)<br>Destreza: 6 (-2)<br>Constituição: 16 (+3)<br>Inteligência 3 (-4)
+	<br>Sabedoria: 6 (-2)<br>Carisma: 5 (-3)</p>
 </body>
 </html>
