--- a/entry/humano.html
+++ b/entry/humano.html
@@ -7,6 +7,6 @@
 <body>
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
     <h3>Humano</h2><br>
-	<p></p>
+	<p>É você, sim você mesmo. Você que está lendo isso neste exato momento. Este é você!</p>
 </body>
 </html>
