--- a/entry/ogro.html
+++ b/entry/ogro.html
@@ -7,6 +7,17 @@
 <body>
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
     <h3>Ogro</h2><br>
-	<p></p>
+	<p>São criaturas gigantes e abomináveis. Não são muito inteligentes e acreditam em coisas que lhe foram contadas, porém destroem tudo o que
+		nao entendem. Qualquer ofensa, por menor que seja, pode ativar a suaira insaciável que só acaba após tudo ser destruido. Estes monstros
+		comem qualquer coisa, mas preferem anões, halflings e elfos, gostam também de caçar a sua comida por diversão. São colecionadores ávidos,
+		guardando espólios de guerreiros mortos e alguns tem preferência por ouro e prata, isso possibilita que um método de <i>lurar</i> eles
+		seja oferecendo uma arma forjada ou moedas em troca de alguma coisa. Normalmente usam um clava como arma ou arrancam uma árvore do chão 
+		e a usam como método de ataque corpo-a-corpo e à distância.
+	</p>
+	<h3>Traços</h3>
+	<p>Gigante Grande, catódico(?) e mau<br>Falam o idioma Comum e o Gigante<br>Podem ver 18 metros no escuro<br>Nível de Desafio: 2 (450XP)</p>
+	<h3>Pontos de vida e Habilidades</h3>
+	<p>59 Pontos de Vida (7d10 + 21)<br>11 Pontos de Armadura<br>Força: 19 (+4)<br>Destreza: 8 (-1)<br>Constituição: 16 (+3)<br>Inteligência 5 (-3)
+	<br>Sabedoria: 7 (-2)<br>Carisma: 7 (-2)</p>
 </body>
 </html>
