--- a/entry/vida.html
+++ b/entry/vida.html
@@ -6,7 +6,10 @@
 </head>
 <body>
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
-    <h3>Vida</h2><br>
-	<p></p>
+    <h2>Vida</h2><br>
+	<table style="width: 100%;">
+		<tr><th>yeet</th><th>yaa</th></tr>
+		<tr><th>yeti</th><th>yuup</th></tr>
+	</table>
 </body>
 </html>
