--- a/index.html
+++ b/index.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>WIR D&D </title>
-  <link rel="stylesheet" href="style.css">
-  <meta name="description" content="Uma Wiki brasileira resumida de Dungeons & Dragons. Acesse tabelas e descrições rapidamente e facilmente!">
-</head>
-<body>
-	<img class="center" alt="Logo do Dungeons & Dragons"src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8e/Dungeons_%26_Dragons_5th_Edition_logo.svg/1200px-Dungeons_%26_Dragons_5th_Edition_logo.svg.png" width="600" height="212">
-	<h1 id="h001">Wiki Interativa Resumida de RPG Dungeons and Dragons (WIR-D&D)</h1>
-	<br>
-	<p id="p001">Esta wiki foi feita para ajudar pessoas novas do D&D e também para players experientes! Ela pode ser usada para consultar 
-    tabelas importantes que estão presentes no livro oficial do jogador e dos monstros. O objetivo desta wiki é tentar catalogar de uma forma
-    resumida <b>tudo</b> sobre Dungeons & Dragons. Se você perceber que está faltando alguma entrada, você pode criar uma issue no nosso <a href="https://github.com/Agentew04/Agentew04.github.io/issues">GitHub</a>
-    ou até criar a sua própria e fazer um pedido de Pull. Todas as entradas presentes até o momento estão listadas abaixo.</p>
-		<h1>Índice de todas as entradas da WIR-D&D<h1>
-      <h3>=>Tutoriais</h3>
-      <h4><a href="entry/tutorial_criandopersonagem.html">Criando o seu Personagem</a></h4>
-			<h3>=>Personagens e relacionados</h3>
-			<h4>Classes</h4>
-			<ul>
-			  <li><a href="entry/ladino.html">Ladino a</a></li>
-			  <li><a href="entry/arqueiro.html">Arqueiro</a></li>
-			</ul>
-			<h4>Raças</h4>
-			<ul>
-        <li><a href="entry/humano.html">Humano</a></li>
-        <li><a href="entry/anao.html">Anão</a></li>
-        <li><a href="entry/elfo.html">Elfo</a></li>
-        <li><a href="entry/halfling.html">Halfling</a></li>
-        <li><a href="entry/gnomo_raca.html">Gnomo(Raça)</a></li>
-			</ul>
-		  <h3>=>Monstros</h3>
-		  <ul>
-				<li><a href="entry/beholder.html">Beholder</a></li>
-        <li><a href="entry/neohidra.html">Neohidra</a></li>
-        <li><a href="entry/gnomo.html">Gnomo das Profundezas</a></li>
-        <li><a href="entry/zumbi.html">Zumbi</a></li>
-        <li><a href="entry/ogro.html">Ogro</a></li>
-        <li><a href="entry/sucubo.html">Sucubo/Íncubo</a></li>
-		  </ul>
-			<h3>=>Tabelas</h3>
-			<ul>
-				<li><a href="entry/xp.html">Níveis e XP</a><br></li>
-				<li><a href="entry/vida.html">Vida</a><br></li>
-				<li><a href="entry/spells_casting.html">Spells e Casting</a><br></li>
-			</ul>
-</body>
+    <head>
+        <link href="style.css" rel="stylesheet"/>
+        <meta id="viewport" name="viewport" content="width=device-width, user-scalable=no"/> 
+        <meta charset="UTF-8"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="topo"><img src="dd.png" class="logo"/></div>
+        <div class="a">
+            Esta wiki foi feita para ajudar pessoas novas do D&D e também para players experientes! Ela pode ser usada para consultar 
+            tabelas importantes que estão presentes no livro oficial do jogador e dos monstros. O objetivo desta wiki é tentar 
+            catalogar de uma forma resumida tudo sobre Dungeons & Dragons. Se você perceber que está faltando alguma entrada, você pode
+            criar uma <a href="https://github.com/Agentew04/Agentew04.github.io/issues" class="link" target="_blank">issue no nosso 
+            Github</a> ou até criar a sua própria e fazer um pedido de Pull. Todas as entradas presentes até o momento estão listadas 
+            abaixo.
+        </div>  
+        <div class="classe">
+            <details>
+                <summary>Classes</summary>
+                <a href="entry/arqueiro.html" class="link" target="_blank">Arqueiro</a><br>
+                <a href="entry/ladino.html" class="link" target="_blank">Ladino</a><br>
+            </details>
+        </div>
+        <div class="raça">
+            <details>
+                <summary>Raças</summary>
+                <a href="entry/humano.html" class="link" target="_blank">Humano</a><br>
+				<a href="entry/anao.html" class="link" target="_blank">Anão</a><br>
+				<a href="entry/gnomo_raca.html" class="link" target="_blank">Gnomo (Raça)</a><br>
+				<a href="entry/elfo.html" class="link" target="_blank">Elfo</a><br>
+				<a href="entry/halfling.html" class="link" target="_blank">Halfling</a><br>
+            </details>
+        </div>
+        <div class="monstro">
+            <details>
+                <summary>Monstros</summary>
+                <a href="entry/zumbi.html"class="link" target="_blank">Zumbi</a><br>
+				<a href="entry/ogro.html" class="link" target="_blank">Ogro</a><br>
+				<a href="entry/beholder.html" class="link" target="_blank">Beholder</a><br>
+				<a href="entry/gnomo.html" class="link" target="_blank">Gnomo</a><br>
+				<a href="entry/neohidra.html" class="link" target="_blank">Neohidra</a><br>
+            </details>
+        </div>
+        <div class="tabela">
+            <details>
+                <summary>Tabelas</summary>
+                <a href="entry/xp.html"class="link" target="_blank">Níveis e XP</a><br>
+                <a href="entry/vida.html" class="link" target="_blank">Vida</a><br>
+                <a href="entry/spells_casting.html" class="link" target="_blank">Spells e Castings</a><br>
+            </details>
+        </div>
+    </body>
 </html>
