--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="topo"><img src="dd.png" class="logo"/></div>
+        <div class="topo"><img src="assets/dd.png" class="logo"/></div>
         <div class="a">
             Esta wiki foi feita para ajudar pessoas novas do D&D e também para players experientes! Ela pode ser usada para consultar 
             tabelas importantes que estão presentes no livro oficial do jogador e dos monstros. O objetivo desta wiki é tentar 
