--- a/entry/tutorial_criandopersonagem.html
+++ b/entry/tutorial_criandopersonagem.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>WIR D&D </title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
-    <h3>Criando o seu personagem!</h2><br>
+    <h2>Criando o seu personagem!</h2><br>
     <h4>1º Passo</h4>
     <p>Escolha a raça de seu personagem. Todas as raças podem ser vistas no índice principal.</p>
     <h4>2º Passo</h4>
