--- a/entry/vida.html
+++ b/entry/vida.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 	<title>WIR D&D </title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
     <h2>Vida</h2><br>
 	<table style="width: 100%;">
-		<tr><th>yeet</th><th>yaa</th></tr>
-		<tr><th>yeti</th><th>yuup</th></tr>
+		<tr><th>first</th><th>second</th></tr>
+		<tr><td>yeet</td><td>yaa</td></tr>
+		<tr><td>yeti</td><td>yuup</td></tr>
 	</table>
 </body>
 </html>
