--- a/entry/gnomo.html
+++ b/entry/gnomo.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>WIR D&D </title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
-    <h3>Gnomo das profundezas</h2><br>
+    <h2>Gnomo das profundezas</h2><br>
 	<p></p>
 </body>
 </html>
