--- a/entry/humano.html
+++ b/entry/humano.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>WIR D&D </title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
-    <h3>Humano</h2><br>
+    <h2>Humano</h2><br>
 	<p>É você, sim você mesmo. Você que está lendo isso neste exato momento. Este é você!</p>
 </body>
 </html>
