--- a/entry/xp.html
+++ b/entry/xp.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>WIR D&D </title>
-	<link rel="stylesheet" href="style.css">
+	<link href="../style.css" rel="stylesheet" >
 </head>
 <body>
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
-    <h3>Experiência e Níveis</h2><br>
+    <h2>Experiência e Níveis</h2><br>
 	<p></p>
 </body>
 </html>
