--- a/entry/zumbi.html
+++ b/entry/zumbi.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>WIR D&D </title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
