add tutorial in menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
             criar uma <a href="https://github.com/Agentew04/Agentew04.github.io/issues/new" class="link" target="_blank">issue no nosso 
             Github</a> ou até criar a sua própria e fazer um pedido de Pull. Todas as entradas presentes até o momento estão listadas 
             abaixo.
-        </div>  
+        </div> 
+        <div class="tutorial">
+            <details>
+                <summary>Tutoriais</summary>
+                <a href="entry/arqueiro.html" class="link" target="_blank">Arqueiro</a><br>
+                <a href="entry/ladino.html" class="link" target="_blank">Ladino</a><br>
+            </details>
+        </div> 
         <div class="classe">
             <details>
                 <summary>Classes</summary>
