--- a/entry/arqueiro.html
+++ b/entry/arqueiro.html
@@ -8,21 +8,21 @@
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
     <h2>Arqueiro</h2><br>
 	<p></p>
-	<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
-
-<ul id="myUL">
-  <li><a href="#Adele">Adele</a></li>
-  <li><a href="#">Agnes</a></li>
-
-  <li><a href="#">Billy</a></li>
-  <li><a href="#">Bob</a></li>
-
-  <li><a href="#">Calvin</a></li>
-  <li><a href="#">Christina</a></li>
-  <li><a href="#">Cindy</a></li>
-</ul>
+	<input type="text" id="myInput" onkeyup="search()" placeholder="Search for names..">
+	<button id="searchbutton" onclick="showHideDiv()">Show/Hide Results</button>
+	<div id="caixapesquisa">
+		<ul id="myUL">
+	  	 	<li><a href="#">Adele</a></li>
+ 	 		<li><a href="#">Agnes</a></li>
+  			<li><a href="#">Billy</a></li>
+  			<li><a href="#">Bob</a></li>
+  			<li><a href="#">Calvin</a></li>
+  			<li><a href="#">Christina</a></li>
+  			<li><a href="#">Cindy</a></li>
+		</ul>
+	</div>
 	<script>
-		function myFunction() {
+		function search() {
 		  // Declare variables
 		  var input, filter, ul, li, a, i, txtValue;
 		  input = document.getElementById('myInput');
@@ -40,6 +40,17 @@
 			  li[i].style.display = "none";
 			}
 		  }
+		}
+		</script>
+		<script>
+		function showHideDiv(){
+			var div;
+			div= document.getElementById("caixapesquisa");
+			if (div.style.display=="none"){
+				div.style.display="block";
+			}else{
+				div.style.display="none";
+			}
 		}
 		</script>
 </body>
