--- a/entry/arqueiro.html
+++ b/entry/arqueiro.html
@@ -8,50 +8,6 @@
     <a href="../index.html"></body><small>Voltar para o menu</small></a>
     <h2>Arqueiro</h2><br>
 	<p></p>
-	<input type="text" id="myInput" onkeyup="search()" placeholder="Search for names..">
-	<button id="searchbutton" onclick="showHideDiv()">Show/Hide Results</button>
-	<div id="caixapesquisa">
-		<ul id="myUL">
-	  	 	<li><a href="#">Adele</a></li>
- 	 		<li><a href="#">Agnes</a></li>
-  			<li><a href="#">Billy</a></li>
-  			<li><a href="#">Bob</a></li>
-  			<li><a href="#">Calvin</a></li>
-  			<li><a href="#">Christina</a></li>
-  			<li><a href="#">Cindy</a></li>
-		</ul>
-	</div>
-	<script>
-		function search() {
-		  // Declare variables
-		  var input, filter, ul, li, a, i, txtValue;
-		  input = document.getElementById('myInput');
-		  filter = input.value.toUpperCase();
-		  ul = document.getElementById("myUL");
-		  li = ul.getElementsByTagName('li');
-		
-		  // Loop through all list items, and hide those who don't match the search query
-		  for (i = 0; i < li.length; i++) {
-			a = li[i].getElementsByTagName("a")[0];
-			txtValue = a.textContent || a.innerText;
-			if (txtValue.toUpperCase().indexOf(filter) > -1) {
-			  li[i].style.display = "";
-			} else {
-			  li[i].style.display = "none";
-			}
-		  }
-		}
-		</script>
-		<script>
-		function showHideDiv(){
-			var div;
-			div= document.getElementById("caixapesquisa");
-			if (div.style.display=="none"){
-				div.style.display="block";
-			}else{
-				div.style.display="none";
-			}
-		}
-		</script>
+	<iframe src="../searchbox.html" width="350 px" style="border: none;"></iframe>
 </body>
 </html>
