--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             Esta wiki foi feita para ajudar pessoas novas do D&D e também para players experientes! Ela pode ser usada para consultar 
             tabelas importantes que estão presentes no livro oficial do jogador e dos monstros. O objetivo desta wiki é tentar 
             catalogar de uma forma resumida tudo sobre Dungeons & Dragons. Se você perceber que está faltando alguma entrada, você pode
-            criar uma <a href="https://github.com/Agentew04/Agentew04.github.io/issues/new" class="link" target="_blank">issue no nosso 
+            criar uma <a href="https://github.com/Agentew04/Agentew04.github.io/issues" class="link" target="_blank">issue no nosso 
             Github</a> ou até criar a sua própria e fazer um pedido de Pull. Todas as entradas presentes até o momento estão listadas 
             abaixo.
         </div> 
