--- a/index.html
+++ b/index.html
@@ -59,5 +59,11 @@
                 <a href="entry/spells_casting.html" class="link" target="_blank">Spells e Castings</a><br>
             </details>
         </div>
+        <div class="conceitos">
+            <details>
+                <summary>Conceitos</summary>
+                <a href="entry/condicoes.html"class="link" target="_blank">Condições</a><br>
+            </details>
+        </div>
     </body>
 </html>
