--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
         <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        
+        <div class="caixa">
+            <div class="c c1"><img src="assets/dd.png" class="dd"/></div>
+            <div class="c c2"><br/><br/><br/><p>&emsp;&ensp;Esta wiki foi feita para ajudar pessoas novas do D&D e também para players experientes! Ela pode ser usada para consultar 
+                tabelas importantes que estão presentes no livro oficial do jogador e dos monstros. O objetivo desta wiki é tentar 
+                catalogar de uma forma resumida tudo sobre Dungeons & Dragons. Se você perceber que está faltando alguma entrada, você pode
+                criar uma <a href="https://github.com/Agentew04/Agentew04.github.io/issues" class="link" target="_blank">issue no nosso 
+                Github</a> ou até criar a sua própria e fazer um pedido de Pull. Todas as entradas presentes até o momento estão listadas 
+                abaixo.</p></div>
+            <div class="c c3">Conceitos
+
+            </div>
+            <div class="c c4">Tabelas
+                
+            </div>
+            <div class="c c5">Tutoriais
+
+            </div>
+            <div class="c c6">classes
+
+            </div>
+            <div class="c c7">raças
+
+            </div>
+            <div class="c c8">monstros
+
+            </div>
+        </div>
     </body>
 </html>
