--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta charset="UTF-8"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
+        <link rel="icon" href="assets/icon.png"/>
+        <title>D&D Wir</title>
     </head>
     <body>
         <div class="caixa">
@@ -20,7 +22,7 @@
 
             </div>
             <div class="c c4">Tabelas
-                
+
             </div>
             <div class="c c5">Tutoriais
 
