--- a/searchbox.html
+++ b/searchbox.html
@@ -1,6 +1,6 @@
 <input type="text" id="myInput" onkeyup="search()" placeholder="Search for names..">
 <button id="searchbutton" onclick="showHideDiv()">Show/Hide Results</button>
-<div id="caixapesquisa" style="background-color: rgb(255, 255, 255); width: auto;">
+<div id="caixapesquisa" style="background-color: rgb(54, 57, 63); width: auto;">
     <ul id="myUL">
            <li><a href="entry/anao.html" target="_blank">Anão</a></li>
           <li><a href="#" >Agnes</a></li>
@@ -11,35 +11,4 @@
           <li><a href="#">Cindy</a></li>
     </ul>
 </div>
-<script>
-    function search() {
-      // Declare variables
-      var input, filter, ul, li, a, i, txtValue;
-      input = document.getElementById('myInput');
-      filter = input.value.toUpperCase();
-      ul = document.getElementById("myUL");
-      li = ul.getElementsByTagName('li');
-    
-      // Loop through all list items, and hide those who don't match the search query
-      for (i = 0; i < li.length; i++) {
-        a = li[i].getElementsByTagName("a")[0];
-        txtValue = a.textContent || a.innerText;
-        if (txtValue.toUpperCase().indexOf(filter) > -1) {
-          li[i].style.display = "";
-        } else {
-          li[i].style.display = "none";
-        }
-      }
-    }
-</script>
-<script>
-    function showHideDiv(){
-        var div;
-        div= document.getElementById("caixapesquisa");
-        if (div.style.display=="none"){
-            div.style.display="block";
-        }else{
-            div.style.display="none";
-        }
-    }
-</script>
+<script src="script.js"></script>
